# S1

./: README.md  problem_sheet_2.py  problem_sheet_3.py  pyproject.toml
S1/: __init__.py
problem_work/: __init__.py  problem_sheet_1.py
