[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "S1"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "ipython==8.28.0",
  "jupyter==1.1.1",
  "numpy==2.1.2",
  "scipy==1.14.1",
  "matplotlib==3.9.2",
  "ipympl==0.9.4",
  "iminuit==2.30.1",
  "pandas==2.2.3",
  "resample==1.10.1",
  "seaborn==0.13.2",
  "scikit-learn==1.5.2",
  "tabulate==0.9.0",
  "tqdm==4.66.5",
  "uncertainties==3.2.2",
  "python-gitlab==4.13.0",
  "ruff",
  "loguru"
]


authors = [
  {name = "Lucas Curtin", email = "lucas.curtin@gmail.com"}
]


description = "A statistical analysis package for various data science tasks."
keywords = ["statistics", "data analysis", "machine learning", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Mathematics"
]
