[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "S1"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "ipython",
  "jupyter",
  "numpy",
  "scipy",
  "matplotlib",
  "ipympl",
  "iminuit",
  "pandas",
  "resample",
  "seaborn",
  "scikit-learn",
  "tabulate",
  "tqdm",
  "uncertainties",
  "python-gitlab",
  "ruff",
  "loguru"
]


authors = [
  {name = "Lucas Curtin", email = "lucas.curtin@gmail.com"}
]


description = "A statistical analysis package for various data science tasks."
keywords = ["statistics", "data analysis", "machine learning", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Mathematics"
]
